objects/ssot__FundingAwardAmendment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdjustedAwardAmount__c</fullName>
        <label>Adjusted Award Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustedEndDateTime__c</fullName>
        <label>Adjusted End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContractId__c</fullName>
        <label>Contract</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FundingAmendmentStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FundingAmendmentType__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FundingAwardId__c</fullName>
        <label>Funding Award</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Funding Award Amendment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSubmitted__c</fullName>
        <label>Is Submitted</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProposedAwardAmount__c</fullName>
        <label>Proposed Award Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProposedEndDateTime__c</fullName>
        <label>Proposed End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726637409_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingAwardAmendment_FundingAwardId_rel</label>
        <referenceTo>ssot__FundingAward__dlm</referenceTo>
        <relationshipLabel>FundingAwardAmendment_FundingAwardId_rel</relationshipLabel>
        <relationshipName>rel_1716726637409_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724992756758_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingAwardAmendment_ContractId_map_rel</label>
        <referenceTo>ssot__Contract__dlm</referenceTo>
        <relationshipLabel>FundingAwardAmendment_ContractId_map_rel</relationshipLabel>
        <relationshipName>rel_1724992756758_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>